# mmft-ooc-designer

./: .readthedocs.yaml  OOCGenerator.py  README.md  Tutorial.ipynb  create_cases.py  extract_results.py  ooc_da.py  pyproject.toml  requirements.txt  stl_output.stl  visualization_def.py
architectures/: newfile.json  ooc_female_simple.json  ooc_generic1.json  ooc_generic2.json  ooc_generic3.json  ooc_generic4.json  ooc_generic5.json  ooc_generic6.json  ooc_male_all.json  ooc_male_gi_tract.json  ooc_male_gi_tract_orig.json  ooc_male_simple.json
architectures/design_result/: design_result.json
docs/: Tutorial.ipynb  conf.py  index.rst  requirements.txt
